# panon

./: .gitignore  CMakeLists.txt  build.sh  cleanbuild.sh  install.sh  makepackage.sh  test.sh
panon/effect/: build_shader_source.py
plasmoid/contents/scripts/panon/effect/: build_shader_source.py  get_effect_list.py  helper.py  read_file.py
plasmoid/contents/shaders/: gldft.fsh  wave-buffer.fsh
plasmoid/contents/ui/: ShaderSource.qml  Spectrum.qml
plasmoid/contents/ui/config/: ConfigEffect.qml
shaders/: CMakeLists.txt  gldft.frag  hsluv-glsl.fsh  shadertoy-head.fsh  utils.fsh  wave-buffer.frag
shaders/bar1ch/: buffer.frag  image.frag
shaders/chain/: image.frag
shaders/default/: image.frag
shaders/oie1ch/: image.frag
shaders/spectrogram/: buffer.frag  image.frag
translations/: CMakeLists.txt
